--- a/backend/project1/appsettings.json
+++ b/backend/project1/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProductDbCS": "Server =(localdb)\\MSSQLLocalDB;Database=Productdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProductDbCS": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
